--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 <script src="https://gw.alipayobjects.com/os/lib/react/16.13.1/umd/react.production.min.js"></script>
 <script src="https://gw.alipayobjects.com/os/lib/react-dom/16.13.1/umd/react-dom.production.min.js"></script>
-<script src="https://raw.githubusercontent.com/myfieewifi/ql/main/npm/darkreader@4.9.40/darkreader.min.js"></script>
-<script src="https://raw.githubusercontent.com/myfieewifi/ql/main/npm/codemirror@5/lib/codemirror.min.js"></script>
-<script src="https://raw.githubusercontent.com/myfieewifi/ql/main/npm/codemirror@5/mode/shell/shell.js"></script>
-<script src="https://raw.githubusercontent.com/myfieewifi/ql/main/npm/codemirror@5/mode/python/python.js"></script>
-<script src="https://raw.githubusercontent.com/myfieewifi/ql/main/npm/codemirror@5/mode/javascript/javascript.js"></script>
-<script src="https://raw.githubusercontent.com/myfieewifi/ql/main/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+<script src="http://118.24.0.55/npm/darkreader@4.9.40/darkreader.min.js"></script>
+<script src="http://118.24.0.55/npm/codemirror@5/lib/codemirror.min.js"></script>
+<script src="http://118.24.0.55/npm/codemirror@5/mode/shell/shell.js"></script>
+<script src="http://118.24.0.55/npm/codemirror@5/mode/python/python.js"></script>
+<script src="http://118.24.0.55/npm/codemirror@5/mode/javascript/javascript.js"></script>
+<script src="http://118.24.0.55/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 <script src="/umi.34b05115.js"></script>
 </body>
 </html>
