--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -25,6 +26,6 @@
 <script src="https://fastly.jsdelivr.net/npm/codemirror@5/mode/python/python.js"></script>
 <script src="https://fastly.jsdelivr.net/npm/codemirror@5/mode/javascript/javascript.js"></script>
 <script src="https://fastly.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-<script src="/umi.34b05115.js"></script>
+<script src="/umi.c7eb612e.js"></script>
 </body>
 </html>
